# sparc-audio

./: .gitignore  README.md  pyproject.toml
src/audio/: main.py  sine.py
